src/objects/cp_Participant__c.object
<CustomObject>
    <description>CP - // Junction Object between Event &amp; User</description>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>cp_Event__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_to_Event__c</fullName>
        <description>Provides a hyperlinked URL to the event</description>
        <formula>HYPERLINK(&quot;https://&quot;+MID( $Api.Enterprise_Server_URL_210, 9, FIND(&quot;/&quot;, MID($Api.Enterprise_Server_URL_210,9,35)))+ Event__r.Id,
&quot;https://&quot;+MID( $Api.Enterprise_Server_URL_210, 9, FIND(&quot;/&quot;, MID($Api.Enterprise_Server_URL_210,9,35)))+ Event__r.Id)</formula>
        <label>Link to Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_End_Date__c</fullName>
        <formula>Event__r.EndDate__c</formula>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <formula>Event__r.StartDate__c</formula>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReApprovalEmailNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-approval email needed</label>
        <type>Checkbox</type>
    </fields>
    <label>Participant</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Event Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>